tests/reference/tokens-paren4-5c2fc32.stderr
tokenizer error: Parentheses was never closed
 --> tests/tokens/errors/paren4.py:6:1
  |
6 | 
  | ^ 
